# P2P_file_transfer

./: .gitignore  README.md  file  note.txt  pyproject.toml  received_file  received_received_test_file.txt  received_test_file.txt  receiver_detection.py  test_file.txt  transfer_resume.py  transfer_security.py  work_rec.py  work_sender.py
.p2p_security/: session_cache.json
chunkingCode/: file  final_rec.py  final_sender.py
chunkingCode/__MACOSX/: ._SwiftShare
chunkingCode/__MACOSX/SwiftShare/: ._.git  ._final_rec.py
old-code/: final_rec.py  final_sender.py  receiver.py  sender.py
